--- a/JumpAndHook/config.json
+++ b/JumpAndHook/config.json
@@ -1,5 +1,8 @@
 {
   "speed": 5,
   "jumpforce": 150,
-  "weight": 75
+  "weight": 75,
+  "timeReduction": 100,
+  "debug": false,
+  "disableMusic": true
 }
